# madr_mongo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yaml
app/: main.py
app/api/v1/: routers.py
app/api/v1/endpoint/: auth.py  author.py  book.py  health.py  users.py
app/core/: exception_handlers.py  logging.py  security.py  settings.py
app/db/: database.py  indexes.py
app/exceptions/: auth.py  author.py  base.py  book.py  user.py
app/repositories/: authors.py  books.py  users.py
app/schemas/author/: base.py  create.py  filter.py  list.py  public.py  update.py
app/schemas/book/: base.py  create.py  filter.py  list.py  public.py  update.py
app/schemas/user/: base.py  create.py  public.py  update.py
app/services/: auth.py  authors.py  books.py  users.py
app/utils/: sanitize.py
tests/: conftest.py
tests/auth/: test_refresh_token.py  test_token.py
tests/authors/: test_create.py  test_delete.py  test_get.py  test_update.py
tests/books/: test_create.py  test_delete.py  test_get.py  test_update.py
tests/health/: test_health.py
tests/users/: test_create.py  test_delete.py  test_update.py
